--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +10,7 @@
     <div class="container">
         <h1>Multi-language Translator</h1>
         <form method="POST" action="#">
-            <div>
+            <div class="form-group">
                 <label for="from_lang">From Language:</label>
                 <select id="from_lang" name="from_lang">
                     <option value="english">English</option>
@@ -21,7 +20,7 @@
                     <option value="sumerian">Sumerian</option>
                 </select>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="to_lang">To Language:</label>
                 <select id="to_lang" name="to_lang">
                     <option value="sanskrit">Sanskrit</option>
@@ -31,15 +30,20 @@
                     <option value="english">English</option>
                 </select>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="word">Enter Word:</label>
                 <input type="text" id="word" name="word" required>
             </div>
-            <button type="submit">Translate</button>
+            <div class="form-group">
+                <button type="submit">Translate</button>
+            </div>
         </form>
 
         <div id="result">
-            <!-- Result will be displayed here after translation -->
+            {% if result %}
+                <h3>Translation Result:</h3>
+                <p>{{ result }}</p>
+            {% endif %}
         </div>
     </div>
 </body>
