--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Multi-language Translator</h1>
-        <form method="POST" action="#">
+        <form method="POST" action="/">
             <div class="form-group">
                 <label for="from_lang">From Language:</label>
                 <select id="from_lang" name="from_lang">
