--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             {% if result %}
                 <h3>Translation Result:</h3>
                 <p>{{ result }}</p>
+            {% else %}
+                <p>No result available. Please try again.</p>
             {% endif %}
         </div>
     </div>
