--- a/index.html
+++ b/index.html
@@ -3,50 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi-language Translator</title>
+    <title>2025 Dead Language Translator by "Edwin 'Kiwing'"</title>
     <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Multi-language Translator</h1>
-        <form method="POST" action="/">
-            <div class="form-group">
-                <label for="from_lang">From Language:</label>
-                <select id="from_lang" name="from_lang">
-                    <option value="english">English</option>
-                    <option value="sanskrit">Sanskrit</option>
-                    <option value="koine">Koine Greek</option>
-                    <option value="latin">Latin</option>
-                    <option value="sumerian">Sumerian</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="to_lang">To Language:</label>
-                <select id="to_lang" name="to_lang">
-                    <option value="sanskrit">Sanskrit</option>
-                    <option value="koine">Koine Greek</option>
-                    <option value="latin">Latin</option>
-                    <option value="sumerian">Sumerian</option>
-                    <option value="english">English</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="word">Enter Word:</label>
-                <input type="text" id="word" name="word" required>
-            </div>
-            <div class="form-group">
-                <button type="submit">Translate</button>
-            </div>
-        </form>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
-        <div id="result">
-            {% if result %}
-                <h3>Translation Result:</h3>
-                <p>{{ result }}</p>
-            {% else %}
-                <p>No result available. Please try again.</p>
-            {% endif %}
-        </div>
+        <main>
+            <section class="translator-card">
+                <h1>2025 Dead Language Translator</h1>
+                <p class="author-credit">by <strong>Edwin "Kiwing"</strong></p> <!-- Author Credit -->
+
+                <form method="POST" action="/">
+                    <div class="form-group">
+                        <label for="from_lang">From Language:</label>
+                        <select id="from_lang" name="from_lang">
+                            <option value="english">English</option>
+                            <option value="sanskrit">Sanskrit</option>
+                            <option value="koine">Koine Greek</option>
+                            <option value="latin">Latin</option>
+                            <option value="sumerian">Sumerian</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="to_lang">To Language:</label>
+                        <select id="to_lang" name="to_lang">
+                            <option value="sanskrit">Sanskrit</option>
+                            <option value="koine">Koine Greek</option>
+                            <option value="latin">Latin</option>
+                            <option value="sumerian">Sumerian</option>
+                            <option value="english">English</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="word">Enter Word:</label>
+                        <input type="text" id="word" name="word" placeholder="Type word to translate" required>
+                    </div>
+
+                    <button type="submit" class="submit-btn">Translate</button>
+                </form>
+            </section>
+
+            <section class="result-section">
+                <div id="result">
+                    {% if result %}
+                        <h3>Translation Result:</h3>
+                        <p>{{ result }}</p>
+                    {% else %}
+                        <p>No result available. Please try again.</p>
+                    {% endif %}
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <p>&copy; 2025 Dead Language Translator. All rights reserved. Created by <strong>Edwin "Kiwing"</strong></p> <!-- Author Credit in Footer -->
+        </footer>
     </div>
 </body>
 </html>
