--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <main>
             <section class="translator-card">
                 <h1>2025 Dead Language Translator</h1>
-                <p class="author-credit">by <strong>Edwin "Kiwing"</strong></p> <!-- Author Credit -->
+                <p class="author-credit">by <strong>Edwin "Kiwing"</strong></p>
 
                 <form method="POST" action="/">
                     <div class="form-group">
@@ -68,7 +68,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 Dead Language Translator. All rights reserved. Created by <strong>Edwin "Kiwing"</strong></p> <!-- Author Credit in Footer -->
+            <p>&copy; 2025 Dead Language Translator. All rights reserved. Created by <strong>Edwin "Kiwing"</strong></p>
         </footer>
     </div>
 </body>
