--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 Dead Language Translator. All rights reserved. Created by <strong>Edwin "Kiwing"</strong></p>
+            <p>&copy; 2025 Dead Language Translator. All rights reserved. Created by <strong>"Kiwing"</strong></p>
         </footer>
     </div>
 </body>
